--- a/release_notes/release_notes.html
+++ b/release_notes/release_notes.html
@@ -1,5 +1,9 @@
-<b>MAC Vendors Release Notes - Published by Splunk October 13, 2021</b>
+<b>MAC Vendors Release Notes - Published by Splunk March 11, 2022</b>
 <br><br>
+<b>Version 2.1.8 - Released March 11, 2022</b>
+<ul>
+<li>Marked the app as FIPS Compliant [PAPP-21869]</li>
+</ul>
 <b>Version 2.1.6 - Released October 13, 2021</b>
 <ul>
 <li>Removed unnecessary build artifacts</li>
